Opened 5 months ago
Closed 5 months ago
#14540 closed bug (fixed)
mount B_PARTITION_TOO_SMALL results in general system error in tracker
Reported by: | kallisti5 | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/beta1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
Lets knock out one of those non-descript general system errors :-)
Mounting the uefi partition in r1beta1(rc1) results in a partition too small error from mount, and a "general system error" from Tracker.
I think we're seeing this because the UEFI partition is 2MiB and the FAT32 minimum is 32MiB?
Change History (3)
comment:2 Changed 5 months ago by
Nope. Two separate issues: you can't mount the partition, and Tracker reports a generic error while the mount command reports a specific one.
Note: See
TracTickets for help on using
tickets.
Duplicate of/related to #14539?